# paper-spec

./: .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-data  README.md  SPECIFICATION.md  pyproject.toml  reproduce.sh
docs/wiki-scaffold/.wiki/: .gitignore  contradictions.md  ingest.jsonl  schema.yaml
examples/: kahneman-tversky-1979.yaml  peters-2019-ergodicity.yaml  zharnikov-2026-org-as-metadata.yaml  zharnikov-2026a-sbt.yaml  zharnikov-2026ad-r22.yaml  zharnikov-2026ae-ost-companion.yaml  zharnikov-2026af-org-as-metadata.yaml  zharnikov-2026b-alibi.yaml  zharnikov-2026d-r1.yaml  zharnikov-2026e-r2.yaml  zharnikov-2026f-r3.yaml  zharnikov-2026g-r4.yaml  zharnikov-2026h-r5.yaml  zharnikov-2026i-ost.yaml  zharnikov-2026j-r6.yaml  zharnikov-2026k-r7.yaml  zharnikov-2026l-rendering.yaml  zharnikov-2026m-projection.yaml  zharnikov-2026o-r9.yaml  zharnikov-2026p-r10.yaml  zharnikov-2026q-r8.yaml  zharnikov-2026r-r11.yaml  zharnikov-2026t-r13.yaml  zharnikov-2026u-r14.yaml  zharnikov-2026w-canon.yaml  zharnikov-2026x-r16.yaml
journal_specs/: README.md  jcr.yaml  jm.yaml  nature.yaml
schema/: paper-spec.schema.json  wiki-schema.yaml
tools/: template.py  validate.py
tools/prompts/: GENERATE_PAPER_YAML.md
